package parser.atom;

public class VarAtom extends Atom {
    public VarAtom(String value) {
        super(Type.Var, value);
    }
}
