package parser.stmt;

public class ElseIfStmt extends ExprBlockStmt {
    public ElseIfStmt() {
        super(Type.ElseIf);
    }
}
