package parser.stmt;

public class ElseStmt extends BlockStmt {
    public ElseStmt() {
        super(Type.Else);
    }
}
