package parser.var;

public class BooleanVar extends Var {
    public BooleanVar(String name) {
        super(Type.Boolean, name);
    }
}
