package parser.var;

public class DecimalVar extends Var {
    public DecimalVar(String name) {
        super(Type.Decimal, name);
    }
}
