package parser.var;

public class IntegerVar extends Var {
    public IntegerVar(String name) {
        super(Type.Integer, name);
    }
}
