package parser.var;

public class StringVar extends Var {

    public StringVar(String name) {
        super(Type.String, name);
    }
}
